--- a/ansible/zsh/playbooks/zsh.yaml
+++ b/ansible/zsh/playbooks/zsh.yaml
@@ -1,17 +1,10 @@
 - name: Install ZSH, Oh-my-zsh and Powerlevel10k + fonts
+  # Change hosts depending on inventory file.
   hosts: localhost
   vars:
     current_user: "{{ ansible_user_id }}"
     zsh_custom: "/home/{{ current_user }}/.oh-my-zsh/custom"
   tasks:
-    - name: "DEBUG: Remove any previous plugins"
-      shell: rm -rf "{{ item }}"
-      loop:
-        - "{{ zsh_custom }}/plugins/zsh-syntax-highlighting"
-        - "{{ zsh_custom }}/plugins/zsh-autosuggestions"
-        - /home/{{ current_user }}/.oh-my-zsh
-      become: true
-
     - name: Install Git
       apt:
         name: git
