--- a/ansible/zsh/playbooks/zsh.yaml
+++ b/ansible/zsh/playbooks/zsh.yaml
@@ -3,7 +3,7 @@
   hosts: localhost
   vars:
     current_user: "{{ ansible_user_id }}"
-    zsh_custom: "/home/{{ current_user }}/.oh-my-zsh/custom"
+    zsh_custom: /home/{{ current_user }}/.oh-my-zsh/custom
   tasks:
     - name: Install Git
       apt:
@@ -39,7 +39,7 @@
       shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
     - name: Downloading plugins for Oh-My-ZSH
-      shell: "git clone https://github.com/zsh-users/{{ item }}.git {{ zsh_custom }}/plugins/{{ item }}"
+      shell: git clone https://github.com/zsh-users/{{ item }}.git {{ zsh_custom }}/plugins/{{ item }}
       loop:
         - zsh-syntax-highlighting
         - zsh-autosuggestions
@@ -52,7 +52,7 @@
       become: true
 
     - name: Install Powerlevel 10k
-      shell: "git clone --depth=1 https://github.com/romkatv/powerlevel10k.git {{ zsh_custom }}/themes/powerlevel10k"
+      shell: git clone --depth=1 https://github.com/romkatv/powerlevel10k.git {{ zsh_custom }}/themes/powerlevel10k
 
     - name: Apply predefined p10k.zsh
       copy:
