Fix capability typo

--- a/docker-compose/wireguard/docker-compose.yml
+++ b/docker-compose/wireguard/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: wireguard
     cap_add:
       - NET_ADMIN
-      - NET_MODULE
+      - SYS_MODULE
     environment:
       - PUID=1000
       - PGID=1000
