--- a/docker-compose/wireguard/docker-compose.yml
+++ b/docker-compose/wireguard/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   wireguard:
     image: linuxserver/wireguard
-    container_name: wireguard
+    container_name: wireguard-server
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
@@ -19,6 +19,8 @@ services:
     volumes:
       - /data/wireguard/config:/config
       - /data/wireguard/lib/modules:/lib/modules
+    ports:
+      - 51820:51820/udp
     sysctls:
       - "net.ipv4.conf.all.src_valid_mark=1"
     restart: unless-stopped
