--- a/docker-compose/nginx/docker-compose.yml
+++ b/docker-compose/nginx/docker-compose.yml
@@ -21,5 +21,5 @@ services:
       # DISABLE_IPV6: 'true'
 
     volumes:
-      - ./data/nginx-proxy-manager/data:/data
-      - ./data/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
+      - /data/nginx-proxy-manager/data:/data
+      - /data/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
