--- a/docker-compose/ddns/docker-compose.yml
+++ b/docker-compose/ddns/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     environment:
       - API_KEY=${CLOUDFLARE_DDNS_API_KEY}
       - ZONE=${CLOUDFLARE_WEBSITE}
-      - PROXIED=false
+      - PROXIED=${CLOUDFLARE_PROXIED}
       - PUID=1000
       - PGID=1000
