Change play header order.

--- a/ansible/docker/install-docker-wsl.yml
+++ b/ansible/docker/install-docker-wsl.yml
@@ -1,5 +1,5 @@
-- hosts: localhost
-  name: Install Docker
+- name: Install Docker
+  hosts: localhost
   become: true
   tasks:
     - name: Remove previous versions of Docker
